--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,6 @@
 body{
     background-color: gainsboro; 
 }
+
+@import url("../node_modules/leaflet/dist/leaflet.css");
+@import url("../node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css");
